# python-rag-emma

./: .gitignore  README.md  installation.md  main.py  pyproject.toml
book/: Emma_by_Jane_Austen.txt
